# riot-match-service

./: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_create_players.py  0002_create_matches.py  0003_create_ranked_entries.py  0004_create_player_matches.py  0005_add_kda_to_player_matches.py
app/: __init__.py  main.py
app/api/: admin_players.py  admin_players_mapper.py  dependencies.py  health.py  players.py  players_mapper.py  router.py
app/core/: config.py
app/models/: __init__.py  match.py  player.py  player_match.py  ranked_entry.py
app/schemas/: __init__.py  player_read.py  player_refresh.py
app/services/: __init__.py  errors.py  player_read.py  player_read_repository.py  player_refresh.py  player_refresh_mapper.py  player_refresh_match_sync.py  player_refresh_models.py  player_refresh_repository.py
app/services/contracts/: __init__.py  player_read.py
app/services/integrations/: __init__.py
app/services/integrations/riot/: __init__.py  errors.py
app/services/mappers/: __init__.py  player_refresh.py
app/services/repositories/: __init__.py  player_read.py  player_refresh.py
app/services/riot/: __init__.py  client.py  dependencies.py  endpoints.py  errors.py  parsers.py  routing.py  schemas.py  transport.py  transport_rate_limit.py  transport_response.py
app/services/riot/client/: __init__.py  (+1 more)
app/services/sync/: __init__.py  player_refresh_match_sync.py
app/services/use_cases/: __init__.py  player_read.py  player_refresh.py
(+36 files in other folders)
