[tool.poetry]
name = "riot-match-service"
version = "0.1.0"
description = "Read-only backend service for Riot match statistics."
authors = ["Daniil <korobkodaniil396@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = ">=0.115,<1.0"
uvicorn = { extras = ["standard"], version = ">=0.30,<1.0" }
sqlalchemy = { extras = ["asyncio"], version = ">=2.0,<3.0" }
asyncpg = ">=0.29,<1.0"
alembic = ">=1.13,<2.0"
pydantic = ">=2.9,<3.0"
pydantic-settings = ">=2.7,<3.0"
httpx = ">=0.27,<1.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.8,<1.0"
mypy = ">=1.13,<2.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
exclude = ["alembic/"]
